[project]
name = "event-sender"
version = "0.1.0"
description = "OpenTelemetry event generator for realistic web app metrics sent to Honeycomb"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opentelemetry-api==1.21.0",
    "opentelemetry-sdk==1.21.0",
    "opentelemetry-exporter-otlp-proto-http==1.21.0",
    "requests==2.31.0",
    "numpy==2.3.3",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
]
